[metadata]
name = pyng
version = 0.1.0
url = https://github.com/LucasVanHaaren/pyng
download_url = https://github.com/LucasVanHaaren/pyng
author = vhash
author_email = vanhaaren.lucas+dev@gmail.com
license = MIT
license_file = LICENSE
description = Old but gold pong game to play with friends.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
keywords = pong, pygame, pygame-games, multiplayer

[options]
packages = pyng
zip_safe = true
python_requires = == 3.6.9
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    pygame==2.0.0

[options.extras_require]
dev =
    flake8
    black

[options.entry_points]
console_scripts =
    pyng = pyng.__main__:main

[flake8]
max-complexity = 10
max-line-length = 88
exclude = 
	__pycache__,
	.env,
	.git,
	build,
	dist